--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,7 @@ repo_url: https://github.com/aries-strato/stratodocs/
 edit_uri: ""
 
 theme:
-  name: windmill
+  name: readthedocs
   highlightjs: true
 
   
